k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  namespace: wisecow
spec:
  selector:
    app.kubernetes.io/name: wisecow
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
